Update README with correct schema, project structure, and query descriptions